[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameUI/Sprites/coin.png" type="Texture" id=1]
[ext_resource path="res://Fonts/pixel2.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameUI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://GameUI/GameUI.gd" type="Script" id=4]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.7089
margin_top = -20.0
margin_right = 73.7089
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.56378
margin_top = -15.1276
margin_right = 9.56378
margin_bottom = -9.12756
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -34.0
margin_right = 42.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Game Name"

[node name="StartButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 38.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="MainMenu/VBoxContainer"]
visible = false
margin_top = 42.0
margin_right = 83.0
margin_bottom = 62.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 83.0
margin_bottom = 62.0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyDwarfButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -20.0
text = "Buy Dwarf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeShovel" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -113.832
margin_top = -43.9729
margin_right = -2.83224
margin_bottom = -23.9729
text = "Upgrade Shovel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradePick" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.709
margin_top = -67.9458
margin_right = -1.70853
margin_bottom = -47.9458
text = "Upgrade Pick"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/VBoxContainer/StartButton" to="MainMenu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ResumeButton" to="MainMenu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ExitButton" to="MainMenu" method="_on_ExitButton_pressed"]
